# docs/swagger.yaml
@@ -1,4 +1,4 @@
-basePath: /
+basePath: /api
 definitions:
   main.AxisGTDJsonType:
     properties:
@@ -36,7 +36,7 @@ definitions:
 host: localhost:8080
 info:
   contact:
-    email: magician33333@gmail.com
+    email: support@axisgtd.com
     name: API Support
   description: API for synchronizing AxisGTD tasks and configurations.
   license:
@@ -50,7 +50,7 @@ paths:
     get:
       description: Checks if the AxisGTD synchronization service is running.
       produces:
-        - text/plain
+      - text/plain
       responses:
         "200":
           description: AxisGTD synchronization service has been run successfully!
@@ -58,16 +58,15 @@ paths:
             type: string
       summary: Check service status
       tags:
-        - index
+      - index
   /create:
     get:
       consumes:
-        - application/json
-      description:
-        Creates a new UID with a generated name and sets up the axisgtd
+      - application/json
+      description: Creates a new UID with a generated name and sets up the axisgtd
         table.
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: Create ID successful! Your ID is {uidName}
@@ -79,25 +78,25 @@ paths:
             type: string
       summary: Create a new UID and axisgtd table
       tags:
-        - id
+      - id
   /delete/{name}/{time}:
     delete:
       consumes:
-        - application/json
+      - application/json
       description: Deletes a record from the database based on UID name and time.
       parameters:
-        - description: UID Name
-          in: path
-          name: name
-          required: true
-          type: string
-        - description: The record's time
-          in: path
-          name: time
-          required: true
-          type: integer
+      - description: UID Name
+        in: path
+        name: name
+        required: true
+        type: string
+      - description: The record's time
+        in: path
+        name: time
+        required: true
+        type: integer
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: Record deleted successfully
@@ -113,20 +112,20 @@ paths:
             type: string
       summary: Delete a record by UID name and time
       tags:
-        - delete
+      - delete
   /id/{name}:
     delete:
       consumes:
-        - application/json
+      - application/json
       description: Deletes a UID and all associated axisgtd records from the database.
       parameters:
-        - description: UID Name
-          in: path
-          name: name
-          required: true
-          type: string
+      - description: UID Name
+        in: path
+        name: name
+        required: true
+        type: string
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: UID and associated records deleted successfully
@@ -138,27 +137,26 @@ paths:
             type: string
       summary: Delete a UID and associated axisgtd records
       tags:
-        - id
+      - id
     get:
       consumes:
-        - application/json
-      description:
-        Retrieves a list of AxisGTD records associated with the given UID
+      - application/json
+      description: Retrieves a list of AxisGTD records associated with the given UID
         name.
       parameters:
-        - description: UID Name
-          in: path
-          name: name
-          required: true
-          type: string
+      - description: UID Name
+        in: path
+        name: name
+        required: true
+        type: string
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
           schema:
             items:
-              $ref: "#/definitions/main.AxisGTDJsonType"
+              $ref: '#/definitions/main.AxisGTDJsonType'
             type: array
         "404":
           description: No records found
@@ -170,20 +168,20 @@ paths:
             type: string
       summary: Get AxisGTD records by UID name
       tags:
-        - id
+      - id
   /ids:
     get:
       consumes:
-        - application/json
+      - application/json
       description: Retrieves the count of axisgtd entries associated with each UID.
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
           schema:
             items:
-              $ref: "#/definitions/main.IDSType"
+              $ref: '#/definitions/main.IDSType'
             type: array
         "500":
           description: Internal server error
@@ -191,20 +189,20 @@ paths:
             type: string
       summary: Get counts of axisgtd per UID
       tags:
-        - id
+      - id
   /status/{name}:
     get:
       consumes:
-        - application/json
+      - application/json
       description: Updates the status field of a UID to the opposite value.
       parameters:
-        - description: UID Name
-          in: path
-          name: name
-          required: true
-          type: string
+      - description: UID Name
+        in: path
+        name: name
+        required: true
+        type: string
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: Status toggled successfully
@@ -220,27 +218,26 @@ paths:
             type: string
       summary: Toggle the status of a UID
       tags:
-        - status
+      - status
   /sync/{name}:
     get:
       consumes:
-        - application/json
-      description:
-        Retrieves the latest AxisGTD record associated with the specified
+      - application/json
+      description: Retrieves the latest AxisGTD record associated with the specified
         UID name, ordered by time in descending order.
       parameters:
-        - description: UID Name
-          in: path
-          name: name
-          required: true
-          type: string
+      - description: UID Name
+        in: path
+        name: name
+        required: true
+        type: string
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: The latest AxisGTD record
           schema:
-            $ref: "#/definitions/main.AxisGTDJsonType"
+            $ref: '#/definitions/main.AxisGTDJsonType'
         "404":
           description: UID not found or no records available
           schema:
@@ -251,27 +248,26 @@ paths:
             type: string
       summary: Get the latest AxisGTD record by UID name
       tags:
-        - sync
+      - sync
     post:
       consumes:
-        - application/json
-      description:
-        Inserts a new AxisGTD record into the database for the given UID
+      - application/json
+      description: Inserts a new AxisGTD record into the database for the given UID
         name.
       parameters:
-        - description: UID Name
-          in: path
-          name: name
-          required: true
-          type: string
-        - description: AxisGTD record to create
-          in: body
-          name: todo_data
-          required: true
-          schema:
-            $ref: "#/definitions/main.AxisGTDType"
+      - description: UID Name
+        in: path
+        name: name
+        required: true
+        type: string
+      - description: AxisGTD record to create
+        in: body
+        name: todo_data
+        required: true
+        schema:
+          $ref: '#/definitions/main.AxisGTDType'
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: Record created successfully
@@ -291,9 +287,9 @@ paths:
             type: string
       summary: Create a new AxisGTD record
       tags:
-        - sync
+      - sync
 schemes:
-  - http
+- http
 securityDefinitions:
   APIKeyAuth:
     in: header
